--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "laptimer"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
 author = "Jonathan Behrens <fintelia@gmail.com>"
 repository = "https://github.com/fintelia/laptimer"
 readme = "README.md"
